--- a/percetakan.sancaka.my.id/public_html/index.html
+++ b/percetakan.sancaka.my.id/public_html/index.html
@@ -1,21 +1,178 @@
-<html>
+<!DOCTYPE html>
+<html lang="id" class="scroll-smooth">
 <head>
-<title>
-percetakan.sancaka.my.id</title>
-<style>
-* { font-family: verdana; font-size: 10pt; COLOR: gray; }
-b { font-weight: bold; }
-table { border: 1px solid gray;}
-td { text-align: center; padding: 25;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Toko Sancaka - Percetakan & Ekspedisi Murah Ngawi</title>
+    <link rel="icon" href="{{ asset('storage/uploads/sancaka.png') }}" type="image/png">
+    <link rel="shortcut icon" href="{{ asset('storage/uploads/sancaka.png') }}" type="image/png">
+    <link rel="apple-touch-icon" href="{{ asset('storage/uploads/sancaka.png') }}">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <style>
+        .gradient-red { background: linear-gradient(135deg, #ef4444 0%, #b91c1c 100%); }
+        .text-gradient { background: linear-gradient(90deg, #4F46E5, #06B6D4); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+    </style>
 </head>
-<body>
-<center>
-<br><br><br><br>
-<table>
-<tr><td>This is a placeholder for the subdomain <b>percetakan.sancaka.my.id</b></td></tr>
-</table>
-<br><br>
-</center>
+<body class="bg-white font-sans text-slate-900">
+
+    <header class="fixed w-full z-50 bg-white/90 backdrop-blur-md border-b border-slate-100">
+        <nav class="max-w-7xl mx-auto px-4 h-20 flex items-center justify-between">
+            <div class="flex items-center gap-3">
+                <img src="https://tokosancaka.com/storage/uploads/sancaka.png" alt="Logo" class="h-10 w-10">
+                <span class="text-xl font-black tracking-tighter uppercase">Sancaka<span class="text-red-600">Group</span></span>
+            </div>
+
+            <div class="hidden md:flex items-center gap-8 text-sm font-bold text-slate-500 uppercase tracking-widest">
+                <a href="#layanan" class="hover:text-red-600 transition">Layanan</a>
+                <a href="#ekspedisi" class="hover:text-red-600 transition">Ekspedisi</a>
+                <a href="#lokasi" class="hover:text-red-600 transition">Lokasi</a>
+
+                <a href="{{ route('affiliate.create') }}" class="hover:text-red-600 transition">Join</a>
+            </div>
+
+            <div class="flex items-center gap-4">
+                @auth
+                    <a href="{{ url('/dashboard') }}" class="px-6 py-2 bg-red-600 text-white rounded-full font-bold text-sm shadow-lg shadow-red-200">Panel Admin</a>
+                @else
+                    <a href="{{ route('daftar.pos') }}" class="text-sm font-bold text-slate-700 hover:text-red-600">Buka Toko</a>
+
+                    <a href="{{ route('daftar.pos') }}" class="px-6 py-2 border-2 border-red-600 text-red-600 rounded-full font-bold text-sm hover:bg-red-600 hover:text-white transition">
+                        Daftar Gratis
+                    </a>
+                @endauth
+            </div>
+        </nav>
+    </header>
+
+    <section class="pt-40 pb-20 bg-slate-50">
+        <div class="max-w-7xl mx-auto px-4 flex flex-col lg:flex-row items-center gap-12">
+            <div class="lg:w-1/2 text-left">
+                <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-red-100 text-red-700 text-xs font-bold mb-6">
+                    <span class="relative flex h-2 w-2">
+                        <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
+                        <span class="relative inline-flex rounded-full h-2 w-2 bg-red-500"></span>
+                    </span>
+                    Buka Sampai 21:00 WIB
+                </div>
+                <h1 class="text-5xl lg:text-7xl font-black leading-none mb-6">
+                    Percetakan & <br><span class="text-gradient">Ekspedisi Murah</span> di Ngawi.
+                </h1>
+                <p class="text-slate-500 text-lg mb-10 max-w-lg">
+                    Platform SaaS Kasir & Layanan terpadu cetak dokumen, fotocopy kilat, hingga pengiriman paket ke seluruh Indonesia.
+                </p>
+                <div class="flex flex-wrap gap-4">
+                    <a href="{{ route('daftar.pos') }}" class="px-8 py-4 gradient-red text-white font-bold rounded-2xl shadow-xl shadow-red-200 flex items-center gap-3 hover:scale-105 transition">
+                        🚀 Mulai Bisnis Sekarang
+                    </a>
+                    <a href="https://wa.me/6285745808809" class="flex items-center gap-3 px-6 py-4 bg-white rounded-2xl border border-slate-200 shadow-sm hover:bg-slate-50 transition">
+                        <span class="font-bold text-slate-600">Hubungi Admin</span>
+                    </a>
+                </div>
+            </div>
+            <div class="lg:w-1/2 relative">
+                <img src="https://tokosancaka.com/storage/uploads/sancaka.png" class="w-64 h-64 mx-auto animate-bounce duration-[3000ms] opacity-20 absolute top-0 left-0 right-0" alt="">
+                <div class="relative bg-white p-8 rounded-[40px] shadow-2xl border border-slate-100">
+                    <h3 class="font-bold text-red-600 uppercase tracking-widest text-xs mb-4">Layanan Unggulan</h3>
+                    <div class="grid grid-cols-2 gap-4">
+                        <div class="p-4 bg-slate-50 rounded-2xl text-center hover:bg-red-50 transition cursor-pointer">
+                            <span class="block text-2xl mb-2">💻</span>
+                            <span class="text-xs font-bold">Aplikasi Kasir</span>
+                        </div>
+                        <div class="p-4 bg-slate-50 rounded-2xl text-center hover:bg-red-50 transition cursor-pointer">
+                            <span class="block text-2xl mb-2">📦</span>
+                            <span class="text-xs font-bold">Kirim Paket</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="harga" class="py-24 bg-white">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="border border-slate-100 rounded-[32px] p-8 hover:shadow-2xl transition">
+                    <h3 class="text-xl font-bold mb-4">Aplikasi Kasir (POS)</h3>
+                    <div class="flex items-baseline gap-1 mb-6">
+                        <span class="text-4xl font-black italic">GRATIS</span>
+                    </div>
+                    <ul class="space-y-4 mb-8 text-sm font-medium">
+                        <li>✅ Manajemen Stok</li>
+                        <li>✅ Laporan Keuangan</li>
+                        <li>✅ Subdomain Sendiri</li>
+                        <li>✅ Integrasi DANA/QRIS</li>
+                    </ul>
+                    <a href="{{ route('daftar.pos') }}" class="block py-3 text-center rounded-xl bg-slate-100 font-bold hover:bg-red-600 hover:text-white transition">Daftar Sekarang</a>
+                </div>
+
+                <div id="ekspedisi" class="gradient-red rounded-[32px] p-8 text-white shadow-2xl shadow-red-200 transform md:-translate-y-6">
+                    <h3 class="text-xl font-bold mb-4">Jasa Pengiriman</h3>
+                    <div class="flex items-baseline gap-1 mb-6">
+                        <span class="text-4xl font-black italic text-cyan-300">Ekspedisi</span>
+                    </div>
+                    <ul class="space-y-4 mb-8 text-sm font-medium text-red-100">
+                        <li>✅ Pickup Paket ke Rumah</li>
+                        <li>✅ Tracking Real-time</li>
+                        <li>✅ Kirim Dokumen & Barang</li>
+                        <li>✅ Tarif Termurah di Ngawi</li>
+                    </ul>
+                    <a href="https://wa.me/628819435180" class="block py-4 text-center rounded-xl bg-white text-red-600 font-black shadow-lg hover:bg-slate-100">HUBUNGI WA</a>
+                </div>
+
+                <div class="border border-slate-100 rounded-[32px] p-8 hover:shadow-2xl transition">
+                    <h3 class="text-xl font-bold mb-4">Percetakan</h3>
+                    <div class="flex items-baseline gap-1 mb-6">
+                        <span class="text-4xl font-black italic">Murah</span>
+                    </div>
+                    <ul class="space-y-4 mb-8 text-sm font-medium">
+                        <li>✅ Fotocopy HVS</li>
+                        <li>✅ Print Warna / Hitam</li>
+                        <li>✅ Jilid Buku</li>
+                        <li>✅ Undangan & Banner</li>
+                    </ul>
+                    <a href="https://wa.me/6285745808809" class="block py-3 text-center rounded-xl bg-slate-100 font-bold hover:bg-red-600 hover:text-white transition">Pesan WA</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="lokasi" class="py-20 bg-slate-50">
+        <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+            <div>
+                <h2 class="text-3xl font-bold mb-6 italic">Pusat Operasional</h2>
+                <div class="space-y-6">
+                    <div class="flex gap-4">
+                        <div class="w-12 h-12 rounded-full bg-white shadow-sm flex items-center justify-center flex-shrink-0 text-2xl">📍</div>
+                        <p class="text-slate-600 leading-relaxed">
+                            <strong>Alamat:</strong> Jalan Dokter Wahidin No.18A, RT.22/RW.05, Sidomakmur, Ketanggi, Ngawi, Jawa Timur 63211
+                        </p>
+                    </div>
+                    <div class="flex gap-4">
+                        <div class="w-12 h-12 rounded-full bg-white shadow-sm flex items-center justify-center flex-shrink-0 text-2xl">📞</div>
+                        <div>
+                            <p class="text-slate-600"><strong>WhatsApp:</strong> 0857-4580-8809</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="h-96 bg-slate-200 rounded-[40px] overflow-hidden shadow-2xl border-4 border-white relative">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.270669223652!2d111.4426!3d-7.4352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e79e60000000001%3A0x123456789abc!2sNgawi!5e0!3m2!1sid!2sid!4v161234567890" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-white pt-20 pb-10 border-t border-slate-100">
+        <div class="max-w-7xl mx-auto px-4 text-center">
+            <h3 class="text-2xl font-black italic mb-2 uppercase">Sancaka Group</h3>
+            <p class="text-slate-400 mb-8 max-w-sm mx-auto">Sistem Layanan Terpadu & SaaS.</p>
+            <div class="text-slate-300 text-[10px] font-bold tracking-[0.2em] uppercase">
+                © {{ date('Y') }} Sancaka Group
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
